@@ -1,3 +1,7 @@
+2002-05-10  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* objs.h,etc:  Added Terrain_game_object class for a bit of cleanup.
+
 2002-05-09  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* data/bg/defaultkeys.txt,keyactions.cc,keys.cc:  Ctrl-arrow and
